syntax = "proto3";

package proto;

import "gorums.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/relab/hotstuff/internal/proto";

service Hotstuff {
  rpc Propose(Block) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  rpc Vote(PartialCert) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }

  rpc NewView(QuorumCert) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }
}

message Block {
  bytes XParent = 1;
  QuorumCert QC = 2;
  uint64 XView = 3;
  bytes XCommand = 4;
  uint32 xProposer = 5;
}

message Signature {
  uint32 ReplicaID = 1;
  bytes XR = 2;
  bytes XS = 3;
}

message PartialCert {
  Signature Sig = 1;
  bytes Hash = 2;
}

message QuorumCert {
  map<uint32, Signature> Sigs = 1;
  bytes Hash = 2;
}
